# harness4visuals-etl-followup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: full-guide.md
docs/integrations/: clickhouse.md  omnigent.md  pioneer-fastino.md  training-targets.md
examples/: chat_history.json  golden_signals.jsonl  long_multiturn_chat_history.json  omnigent_session_events.json
schemas/clickhouse/: harness4visuals.sql
schemas/postgres/: harness_runtime.sql
src/agent_taste_etl/: __init__.py  cli.py  etl.py  evaluate.py  extract.py  integrations.py  io.py  models.py  omnigent.py
tests/: test_evaluator.py  test_extractor.py  test_integrations.py  test_io.py  test_omnigent.py  test_pipeline.py
